# xfem_project

./: .gitignore  README.md  TODO  adapt_integration_conv.ods  matrix_prop.m  matrix_properties.m  rychlost konvergence.ods  rychlost konvergence.xlsx  versions.txt  xfem_matrices.m  xfem_matrices2.m
001/: .gitignore  CMakeLists.txt  adaptive_integration.cc  adaptive_integration.hh  comparing.cc  data_cell.cc  data_cell.hh  exact_model.cc  main.cc  mapping.cc  model.cc  model.hh  model_base.cc  model_base.hh  parameters.cc  simple_models.cc  xfem_paraview.pvsm  xmodel.cc  xmodel.hh
002/: adaptive_integration.cc  adaptive_integration.hh  bem_model.cc  bem_model.hh  comparing.cc  comparing.hh  config_doxygen  data_cell.cc  data_cell.hh  exact_model.cc  exact_model.hh  main.cc  makefile  mapping.cc  model.cc  model.hh  model_base.cc  model_base.hh  parameters.cc  simple_models.cc  simple_models.hh  system.cc  system.hh  well.hh  xfevalues.cc  xfevalues.hh  xmodel.cc  xmodel.hh  xmodel_impl.hh
003/: CMakeLists.txt  adaptive_integration.cc  adaptive_integration.hh  adaptive_integration_base.cc  adaptive_integration_base.hh  adaptive_integration_impl.hh  bem_model.hh  comparing.cc  comparing.hh  data_cell.cc  data_cell.hh  exact_model.cc  exact_model.hh  global_setting_writer.cc  global_setting_writer.hh  gnuplot_i.hpp  main.cc  model.cc  model.hh  model_base.cc  model_base.hh  simple_models.cc  simple_models.hh  system.hh  well.cc  well.hh  xfevalues.cc  xfevalues.hh  xmodel.cc  xmodel.hh  xmodel_impl.hh  xmodel_tests.cc  xquadrature_base.cc  xquadrature_base.hh  xquadrature_cell.cc  xquadrature_cell.hh  xquadrature_well.cc  xquadrature_well.hh
004/: CMakeLists.txt  LICENSE  adaptive_integration.cc  adaptive_integration.hh  adaptive_integration_base.hh  adaptive_integration_impl.hh  bem_model.cc  comparing.cc  comparing.hh  exact_model.cc  exact_model.hh  global_setting_writer.cc  gnuplot_i.cc  main.cc  mapping.cc  mapping.hh  massert.h  model.cc  model.hh  (+14 more)
(+67 files in other folders)
